--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -46,6 +46,14 @@
   font-size: 20px;
 }
 
+.navbar-center li:hover,
+.navbar-right li:hover {
+  background-color: #dc3c4d;
+  border-radius: 25px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
 .nav-login,
 .nav-signup {
   padding: 0.5em;
