--- a/src/components/userPage/HeaderUserProfile.css
+++ b/src/components/userPage/HeaderUserProfile.css
@@ -1,14 +1,15 @@
 .headerUserProfile {
-    height: 350px;
+    height: 450px;
     width: 100%;
     position: relative;
     /* position: absolute;
     top: 0px;
     left: 0px; */
-    background-image: url("../img/headerphotos/12.jpg");
+    background-image: url(/src/img/headerphotos/16.jpg);
     background-repeat: no-repeat;
     background-size: cover;
   }
+
   
   .slogan {
     margin: 1em;
