--- a/src/components/home/Header.css
+++ b/src/components/home/Header.css
@@ -5,7 +5,7 @@
   /* position: absolute;
   top: 0px;
   left: 0px; */
-  background-image: url("../img/headerphotos/7.jpg");
+  background-image: url("/src/img/headerphotos/7.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
