--- a/src/components/userPage/UserProfile.css
+++ b/src/components/userPage/UserProfile.css
@@ -13,7 +13,7 @@
     width: 100%;
     height: auto; 
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .userDetailsLeft {
@@ -22,7 +22,11 @@
     height: 50vh;
     flex-direction: column;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
+}
+
+.profilePic {
+    width: 150px;
 }
 
 
