--- a/src/components/userPage/UserProfile.css
+++ b/src/components/userPage/UserProfile.css
@@ -1,7 +1,7 @@
 .userProfile {
     display: flex; 
     width: 100%;
-    height: auto; 
+    height: 100%; 
     flex-direction: column;
     justify-content: center;
     align-items:center;
@@ -11,32 +11,49 @@
 .userDetails {
     display: flex; 
     width: 100%;
-    height: auto; 
-    justify-content: center;
+    height: 100%; 
+    justify-content: flex-start;
     align-items: center;
 }
 
 .userDetailsLeft {
     display: flex; 
     width: 100%;
-    height: 50vh;
+    height: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 auto; 
 }
 
 .profilePic {
-    width: 150px;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    margin-top: 30px; 
 }
 
+.userDetailsLeft p {
+    font-size:20px; 
+    font-weight: bold; 
+    margin-top: 20px; 
+    color:#f8fbfd; 
+}
 
 .userDetailsMiddle {
     display: flex; 
     width: 100%;
-    height: 50vh;
+    height: 100%;
     flex-direction: column;
     justify-content:center;
     align-items: center; 
+    box-shadow:0 0 5px 5px #f8fbfd;
+}
+
+.userDetailsMiddle h6, 
+.userDetailsMiddle p {
+    color: #f8fbfd;
+    margin: 0; 
 }
 
 .userDetailsRight {
@@ -49,7 +66,7 @@
 }
 
 .linkedDogs {
-    margin-top: 5%; 
+    margin: 5% auto; 
     display:flex; 
     justify-content: center;
     align-items:center; 
@@ -57,6 +74,9 @@
 
 .linkedDogs img {
     margin: 0 10%; 
+    width: 200px;
+    height:200px;
+    border-radius: 50%;
 }
 
 
