--- a/src/components/userPage/UserProfile.css
+++ b/src/components/userPage/UserProfile.css
@@ -12,8 +12,8 @@
     display: flex; 
     width: 100%;
     height: 100%; 
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .userDetailsLeft {
@@ -37,7 +37,6 @@
     font-size:20px; 
     font-weight: bold; 
     margin-top: 20px; 
-    color:#f8fbfd; 
 }
 
 .userDetailsMiddle {
@@ -45,15 +44,15 @@
     width: 100%;
     height: 100%;
     flex-direction: column;
-    justify-content:center;
-    align-items: center; 
-    box-shadow:0 0 5px 5px #f8fbfd;
+    justify-content:flex-start;
+    align-items: flex-start; 
+    margin: 0 2rem; 
 }
 
 .userDetailsMiddle h6, 
 .userDetailsMiddle p {
-    color: #f8fbfd;
-    margin: 0; 
+    margin-top: 0;
+    margin-bottom: 1.7rem; 
 }
 
 .userDetailsRight {
