--- a/src/components/dogprofile/DogGallery.css
+++ b/src/components/dogprofile/DogGallery.css
@@ -8,12 +8,29 @@
 
 .dog-gallery-box {
   width: 60%;
-  margin-bottom: 2em;
+  margin-bottom: 4em;
+  background-color: white;
+  border: 10px solid white;
+  border-radius: 10px;
 }
 
 .pawprint-gallery {
   width: 7%;
   margin-top: -4%;
+}
+
+.doggalleryphoto {
+  cursor: pointer;
+}
+
+.doggalleryphoto:hover {
+  cursor: pointer;
+  scale: 1.5;
+}
+
+.buttonbacktop {
+  font-size: 1em;
+  margin-bottom: 2em;
 }
 
 /* 
