--- a/src/components/dogprofile/Dogprofile.css
+++ b/src/components/dogprofile/Dogprofile.css
@@ -68,7 +68,10 @@
 }
 
 .dogprofilepic img {
-  height: 300px;
+  height: auto;
+  width: auto;
+  max-width: 220px;
+  max-height: 220px;
 }
 
 /*----------------------------------ABOUT----------------------------------*/
@@ -96,7 +99,7 @@
 }
 
 .aboutdogparent img {
-  width: 100px;
+  width: 30%;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   margin-bottom: 1em;
