starting with ccreate dog form

--- a/src/components/dogprofile/DogArrays.css
+++ b/src/components/dogprofile/DogArrays.css
@@ -35,3 +35,9 @@
   margin-right: 1em;
   width: 16%;
 }
+
+/* 
+  Blue (primary): #3699E2
+  Yellow: #F4C34D
+  Red: #DC3C4D 
+  Offwhite: #F8FBFD*/
