--- a/src/components/dogprofile/DogBooleans.css
+++ b/src/components/dogprofile/DogBooleans.css
@@ -37,3 +37,9 @@
   border-radius: 50%;
   margin-bottom: 1em;
 }
+
+/* 
+  Blue (primary): #3699E2
+  Yellow: #F4C34D
+  Red: #DC3C4D 
+  Offwhite: #F8FBFD*/
