--- a/src/components/userPage/UserProfile.css
+++ b/src/components/userPage/UserProfile.css
@@ -108,7 +108,7 @@
 
 .linkedDogs {
     width: 100%;
-    height: 300px;
+    height: 350px;
     margin: 0 auto; 
     display:flex; 
     flex-direction:column;
@@ -120,7 +120,7 @@
 
 .linkedDogs h4{
     color:#2E2E2E;
-    margin: 4rem auto 1rem auto ;
+    margin: 2rem auto 1rem auto;
 }
 
 
@@ -132,13 +132,25 @@
     align-items:center; 
 }
 
-.dogPics img {
+.dogDetails {
+    display: flex;
+    flex-direction: column;
+    width: 100%; 
+    justify-content: center;
+    align-items:center;  
+}
+
+.dogDetails h6 {
+    margin-top: 1rem;
+    margin-bottom:1rem; 
+}
+
+
+
+.dogDetails img {
     width: 200px;
     height:200px;
-    display: flex;
     border-radius: 10%;
-    margin: 0 8rem;
-    margin-bottom: 4rem;
 }
 
 
