--- a/src/components/dogprofile/DogGallery.css
+++ b/src/components/dogprofile/DogGallery.css
@@ -28,6 +28,11 @@
   scale: 1.5;
 }
 
+/* .MuiImageListItem-img {
+  width: auto;
+  height: auto;
+} */
+
 .buttonbacktop {
   font-size: 1em;
   margin-bottom: 2em;
