--- a/src/components/userPage/UserProfile.css
+++ b/src/components/userPage/UserProfile.css
@@ -1,157 +1,156 @@
 .userProfile {
-    display: flex; 
-    width: 100%;
-    height: 100%; 
-    flex-direction: column;
-    justify-content: center;
-    align-items:center;
-    margin: 0 auto; 
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .userDetails {
-    display: flex; 
-    width: 100%;
-    height: 100%; 
-    justify-content: center;
-    align-items: flex-start;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .userDetailsLeft {
-    display: flex; 
-    width: 30%;
-    height: 100%;
-    flex-direction: column;
-    justify-content:center;
-    align-items: flex-start;
-    margin: 1rem 0 1rem 3rem; 
+  display: flex;
+  width: 30%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 1rem 0 1rem 3rem;
 }
 
 .profilePic {
-    width: 250px;
-    height: 300px; 
-    border-radius: 10%;
-    margin-top: 1rem; 
-    margin-bottom: 1rem;
-    margin-left: 3rem;
+  max-width: 250px;
+  /* height: 300px; */
+  border-radius: 10%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  margin-left: 3rem;
 }
 
-.userLocation, .userEmail, .userNumber {
-    width: 100%;
-    height: 50px;
-    display: flex; 
-    justify-content: flex-start;
-    align-items:center;
-    margin-top: 0; 
-    margin-left: 7rem;
+.userLocation,
+.userEmail,
+.userNumber {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 0;
+  margin-left: 7rem;
 }
 
 .userPageIcon {
-   width: 25px;
-   height: 25px;
-   color: #dc3c4d;
-   margin-top: 1px;
-   margin-bottom:3px;
+  width: 25px;
+  height: 25px;
+  color: #dc3c4d;
+  margin-top: 1px;
+  margin-bottom: 3px;
 }
 
-.userDetailsLeft h6{
-    margin-left: 1rem;
-    font-size: 18px;  
+.userDetailsLeft h6 {
+  margin-left: 1rem;
+  font-size: 18px;
 }
 
 .userDetailsMiddle {
-    display: flex; 
-    width: 40%;
-    height: 100%;
-    flex-direction: column;
-    justify-content:center;
-    align-items:flex-start; 
-    margin: 0 1rem; 
+  display: flex;
+  width: 40%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 0 1rem;
 }
 
-.userDetailsMiddle h3, 
+.userDetailsMiddle h3,
 .userDetailsMiddle h6 {
   margin-bottom: 0;
 }
 .walkingDog img {
-    margin-top: 5rem;
-    margin-bottom: 0;
-    margin-left: 22rem;
+  margin-top: 5rem;
+  margin-bottom: 0;
+  margin-left: 22rem;
 }
-
-
 
 .userDetailsRight {
-    display: flex; 
-    width: 30%;
-    height: 100%; 
-    flex-direction: column;
-    justify-content:center;
-    align-items: center;  
-    margin-top: 2.2rem;
+  display: flex;
+  width: 30%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2.2rem;
 }
 
-.userDetailsRight p{
-  margin-bottom: 0 ;
+.userDetailsRight p {
+  margin-bottom: 0;
 }
 
-.openButton { 
-    pointer-events: none;   
-    margin: 0.5rem auto;
-
+.openButton {
+  pointer-events: none;
+  margin: 0.5rem auto;
 }
 
-.closeButton { 
-    pointer-events: none;   
-    margin: 0.5rem auto;
-    opacity: 0.2;
+.closeButton {
+  pointer-events: none;
+  margin: 0.5rem auto;
+  opacity: 0.2;
 }
 
 .linkedDogs {
-    width: 100%;
-    height: 350px;
-    margin: 0 auto; 
-    display:flex; 
-    flex-direction:column;
-    justify-content: center;
-    align-items:center; 
-    background-color: #F4C34D; 
-    padding: 0;
+  width: 100%;
+  height: 350px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f4c34d;
+  padding: 0;
 }
 
-.linkedDogs h4{
-    color:#2E2E2E;
-    margin: 2rem auto 1rem auto;
+.linkedDogs h4 {
+  color: #2e2e2e;
+  margin: 2rem auto 1rem auto;
 }
-
 
 .dogPics {
-    width: 100%;
-    height:auto;
-    display:flex; 
-    justify-content: center;
-    align-items:center; 
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .dogDetails {
-    display: flex;
-    flex-direction: column;
-    width: 100%; 
-    justify-content: center;
-    align-items:center;  
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .dogDetails h6 {
-    margin-top: 1rem;
-    margin-bottom:1rem; 
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
-
-
 
 .dogDetails img {
-    width: 200px;
-    height:200px;
-    border-radius: 10%;
+  width: 200px;
+  height: 200px;
+  border-radius: 10%;
+  object-fit: cover;
 }
 
-
-
+.adddoggobutton {
+  margin: 1em 0 2em 0;
+  font-size: 1em;
+}
