--- a/src/components/createdog/DropZones/DropZone.css
+++ b/src/components/createdog/DropZones/DropZone.css
@@ -31,7 +31,8 @@
   flex-direction: column;
   align-items: center;
   width: 70%;
-  margin: 3em auto;
+  margin: 0 auto;
+  margin-bottom: 2em;
   border-radius: 10px;
   border: 2.5px dashed lightgrey;
   cursor: pointer;
@@ -71,6 +72,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 1em;
 }
 
 .renderedimages img {
