--- a/src/components/places/dogfriendlyPlaces.css
+++ b/src/components/places/dogfriendlyPlaces.css
@@ -1,7 +1,7 @@
 .leaflet-container {
   width: 100%;
   height: 600px;
-  margin: 1em 0 1em;
+  margin: 0.5rem auto;
 }
 
 .headerPlaces {
@@ -27,6 +27,7 @@
   display: flex;
 }
 
-.locations {
-  width: 20%;
+.addNewLocationBtn {
+  margin: 2rem 1rem;
 }
+
