--- a/src/components/places/dogfriendlyPlaces.css
+++ b/src/components/places/dogfriendlyPlaces.css
@@ -1,7 +1,7 @@
 .leaflet-container {
   width: 100%;
-  height: 600px;
-  margin: 1em 0 1em;
+  height: 500px;
+  margin: 1rem 1rem; 
 }
 
 .headerPlaces {
@@ -29,4 +29,26 @@
 
 .locations {
   width: 20%;
+}
+
+
+/*----------MEDIA QUERIES------------*/
+
+@media (min-width: 1530px) {
+  .headerPlaces {
+    /* height: 600px; */
+    background-position: 0 45%;
+  }
+}
+
+@media (min-width: 1960px) {
+  .headerPlaces {
+    height: 600px;
+  }
+}
+
+@media (min-width: 2300px) {
+  .headerPlaces {
+    height: 700px;
+  }
 }
