--- a/src/components/createdog/CreateDog.css
+++ b/src/components/createdog/CreateDog.css
@@ -1,11 +1,17 @@
 .createdog-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+.MuiBox-root {
+  margin: 0 auto;
+  width: 90%;
 }
 
 .createdog-header {
   height: 400px;
-  width: 100%;
+  min-width: 100%;
   background-image: url("../../img/headerphotos/24.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -135,3 +141,11 @@
   Yellow: #F4C34D
   Red: #DC3C4D 
   Offwhite: #F8FBFD*/
+
+/*----------MEDIA QUERIES------------*/
+
+@media (min-width: 830px) {
+  .dogname h2 {
+    font-size: 35px;
+  }
+}
