added description to button for new map location

--- a/src/components/places/dogfriendlyPlaces.css
+++ b/src/components/places/dogfriendlyPlaces.css
@@ -36,6 +36,10 @@
   margin: 2rem 1rem;
 }
 
+.newLocationPrompt {
+  display: flex;
+}
+
 /*----------MEDIA QUERIES------------*/
 
 @media (min-width: 1530px) {
